proyecto fase2 y fase3/Kubenetes/Fase3proyecto/ingressFront.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo-react-expose
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: proyectofinal.sop-es-sergio.online 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-react
            port:
              number: 80
